--- a/test/index.html
+++ b/test/index.html
@@ -15,10 +15,11 @@ onmessage = function(event) {
     self.MESSAGE = event.data;
 
     importScripts(MESSAGE.BASE_DIR + "../node_modules/uupaa.binarypacker.js/lib/BinaryPacker.js");
+    importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Reflection.js");
     importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Console.js");
-    importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Help.js");
     importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Valid.js");
-    importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/TestTask.js");
+    importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Help.js");
+    importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Task.js");
     importScripts(MESSAGE.BASE_DIR + "../../WebModule/lib/Test.js");
     importScripts(MESSAGE.BASE_DIR + "../lib/BinaryPacker0x0002.js");
     importScripts(MESSAGE.BASE_DIR + "../release/BinaryPacker0x0002.min.js");
@@ -29,10 +30,11 @@ onmessage = function(event) {
 </script>
 
 <script src="../node_modules/uupaa.binarypacker.js/lib/BinaryPacker.js"></script>
+<script src="../../WebModule/lib/Reflection.js"></script>
 <script src="../../WebModule/lib/Console.js"></script>
-<script src="../../WebModule/lib/Help.js"></script>
 <script src="../../WebModule/lib/Valid.js"></script>
-<script src="../../WebModule/lib/TestTask.js"></script>
+<script src="../../WebModule/lib/Help.js"></script>
+<script src="../../WebModule/lib/Task.js"></script>
 <script src="../../WebModule/lib/Test.js"></script>
 <script src="../lib/BinaryPacker0x0002.js"></script>
 <script src="../release/BinaryPacker0x0002.min.js"></script>
